--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "author": "raaaahman <sylvain@devindetails.com>",
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
