--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "author": "raaaahman <sylvain@devindetails.com>",
   "dependencies": {
+    "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "next": "^13.4.1",
     "react": "^18.2.0",
