--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark": "^14.0.3",
-    "remark-html": "^15.0.2"
+    "remark-html": "^15.0.2",
+    "tw-elements": "^1.0.0-beta3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
